Updated product overview

--- a/sections/products-overview.liquid
+++ b/sections/products-overview.liquid
@@ -62,7 +62,8 @@
         </div>
 
         <div class="pricing-option addon">
-          <span class="popular-tag">Optional Add-on</span>
+          <span class="popular-tag">Optional
+            Add-on</span>
           <div class="price-header">
             <h4>Setup</h4>
             <div class="price">
