--- a/sections/products-overview.liquid
+++ b/sections/products-overview.liquid
@@ -466,7 +466,15 @@
     .product-header {
       margin-bottom: 40px;
     }
+
+    .popular-tag {
+      white-space: pre-line;
+      line-height: 1.3;
+      padding: 8px 16px;
+    }
   }
+
+  
 </style>
 
 {% schema %}
