--- a/sections/products-overview.liquid
+++ b/sections/products-overview.liquid
@@ -83,7 +83,8 @@
     </div>
   </section>
 
-  <!-- Recorded Coaching Section -->
+  <!-- Recorded Coaching Section - HIDDEN -->
+  {% comment %}
   <section class="product-showcase coaching-section">
     <div class="container">
       <div class="product-header">
@@ -137,6 +138,7 @@
       </div>
     </div>
   </section>
+  {% endcomment %}
 </div>
 
 <style>
