Hid recorded coaching

--- a/sections/products-overview.liquid
+++ b/sections/products-overview.liquid
@@ -177,6 +177,7 @@
   .bot-suite-section {
     background: #050807;
     border-bottom: none;
+    padding-bottom: 60px;
   }
 
   .coaching-section {
