--- a/sections/products-overview.liquid
+++ b/sections/products-overview.liquid
@@ -171,7 +171,7 @@
 
   /* Product Showcase Sections */
   .product-showcase {
-    padding: 40px 20px;
+    padding: 40px 20px 0;
   }
 
   .bot-suite-section {
