Hid recorded coaching

--- a/sections/products-overview.liquid
+++ b/sections/products-overview.liquid
@@ -84,6 +84,7 @@
   </section>
 
   <!-- Recorded Coaching Section - HIDDEN -->
+  {% comment %}
   <section class="product-showcase coaching-section">
     <div class="container">
       <div class="product-header">
@@ -137,6 +138,7 @@
       </div>
     </div>
   </section>
+  {% endcomment %}
 </div>
 
 <style>
