Updated header colors

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -198,17 +198,17 @@
     object-fit: cover;
   }
 
-  .logo-text {
-    display: flex;
-    gap: 0;
+  .logo .logo-text {
+    display: inline-flex;
+    color: transparent;
   }
 
-  .logo-market {
-    color: #00ff41;
+  .logo .logo-text .logo-market {
+    color: #00ff41 !important;
   }
 
-  .logo-sniper {
-    color: white;
+  .logo .logo-text .logo-sniper {
+    color: #ffffff !important;
     margin-left: 0.3em;
   }
 
