Updated header colors

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -198,21 +198,18 @@
     object-fit: cover;
   }
 
-  /* Override layout.css logo-text color */
-  .navbar .logo .logo-text {
+  .logo .logo-text {
     display: inline-flex;
-    color: transparent !important;
+    color: transparent;
   }
 
-  .navbar .logo .logo-text .logo-market {
+  .logo .logo-text .logo-market {
     color: #00ff41 !important;
-    display: inline-block;
   }
 
-  .navbar .logo .logo-text .logo-sniper {
+  .logo .logo-text .logo-sniper {
     color: #ffffff !important;
     margin-left: 0.3em;
-    display: inline-block;
   }
 
   .nav-links {
@@ -500,19 +497,6 @@
     .mobile-menu {
       width: 100%;
     }
-  }
-
-  /* CRITICAL: Override layout.css - Must be at the end */
-  .navbar .container .logo .logo-text {
-    color: transparent !important;
-  }
-
-  .navbar .container .logo .logo-text .logo-market {
-    color: #00ff41 !important;
-  }
-
-  .navbar .container .logo .logo-text .logo-sniper {
-    color: #ffffff !important;
   }
 </style>
 
